--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,9 @@
 spring:
+  datasource:
+    url: jdbc:h2:./corn
+  jpa:
+    hibernate:
+      ddl-auto: create
   data:
     rest:
       base-path: /api
