将web打包成jar文件

--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,8 +1,16 @@
 plugins {
+    id 'java'
     id 'com.github.node-gradle.node' version '4.0.0'
 }
 
 tasks.register('yarnBuild', YarnTask) {
     group = 'yarn'
     args = ['build']
+}
+
+processResources {
+    dependsOn yarnBuild
+    from('dist') {
+        into 'static'
+    }
 }
